# splendidmines

./: .gitignore  CMakeLists.txt  README.md  build.temp.sh  globaldefs.h
core/: api.h  board.cpp  board.h  cell.h  eqs.cpp  eqs.h  logbook.cpp  logbook.h  options.cpp  options.h  perfana.cpp  perfana.h  utils.cpp  utils.h  vargroup.cpp  vargroup.h
frontend/: api.cpp  dialogs.cpp  dialogs.h  main.cpp  mainwindow.cpp  mainwindow.h  selfdefined.glade  splendidmines.glade
gui/: bevelctrl.cpp  bevelctrl.h  bitmapctrl.cpp  bitmapctrl.h  boardctrl.cpp  boardctrl.h  buttonctrl.cpp  buttonctrl.h  ctrl.cpp  ctrl.h  gamectrl.cpp  gamectrl.h  lcdctrl.cpp  lcdctrl.h  smileyctrl.cpp  smileyctrl.h
